# paper-scissors-rock

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: game.h  paper_scissors_rock_game.h  referee.h
src/: main.cpp  paper_scissors_rock_game.cpp
test/: test.cpp
